--- a/css/styles-ch.css
+++ b/css/styles-ch.css
@@ -8,6 +8,11 @@ h2 {
   font-style: oblique;
 }
 
+h3 {
+  font-size: 200px;
+  font-style: oblique;
+}
+
 .button {
   background-color: #e3c013ec;
   /* Green */
