--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,11 @@ h2 {
   font-style: oblique;
 }
 
+h3 {
+  font-size: 200px;
+  font-style: oblique;
+}
+
 .button {
   background-color: #4CAF50;
   /* Green */
